src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>MobileCheckIns__c</fullName>
        <description>Number of mobile check-ins</description>
        <inlineHelpText>Number of mobile check-ins</inlineHelpText>
        <label>Mobile Check-Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerTier__c</fullName>
        <description>The tier of this customer based on number of mobile check-ins</description>
        <formula>if ( MobileCheckIns__c &gt;= 25, &apos;Platinum&apos;,
            if ( MobileCheckIns__c &gt;= 10, &apos;Gold&apos;,
            if ( MobileCheckIns__c &gt;= 5, &apos;Silver&apos;,
            if ( MobileCheckIns__c &gt;= 1, &apos;Bronze&apos;,
            &apos;None&apos;
            ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlashSaleDiscount__c</fullName>
        <description>The flash sale discount offered to this customer based on their tier</description>
        <formula>if ( CustomerTier__c = &apos;Platinum&apos;, 0.20,
            if ( CustomerTier__c = &apos;Gold&apos;, 0.15,
            if ( CustomerTier__c = &apos;Silver&apos;, 0.10,
            if ( CustomerTier__c = &apos;Bronze&apos;, 0.05,
            0
            ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flash Sale Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>